--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
   <script src="https://kit.fontawesome.com/62c69daf43.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <!-- toggle section -->
+  <input type="checkbox" id="check">
+  <label for="check">
+    <i class="fas fa-bars" id="hambargerBtn"></i>
+    <i class="fas fa-times" id="cancel"></i>
+  </label>
+
+  <!-- sidebar section -->
   <div class="sidebar">
     <header>お店情報</header>
     <ul>
       <li>
-        <a href="#"><i class="fa-solid fa-qrcode">ダッシュボード</i></a>
+        <a href="#"><i class="fa-solid fa-qrcode"></i>ダッシュボード</a>
       </li>
 
       <li>
@@ -43,5 +51,7 @@
     </ul>
   </div>
 
+
+  <div class="bg"></div>
 </body>
 </html>
